Conditional rendering for comments implented. Now shows 'No Comments' if there are no comments on the article. Like button visibility issue fixed.

--- a/src/css/Article.css
+++ b/src/css/Article.css
@@ -10,12 +10,13 @@
     border-style: solid;
     margin: 0;
     margin-top: 1.5rem;
+    margin-bottom: 2rem;
     border-radius: 1rem;
     padding: 1rem;
     padding-top: 0.5rem;
 }
 
-#articleInfo{
+.articleInfo{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,6 +27,7 @@
     border: black;
     border-style: solid;
     margin-top: 1rem;
+    margin-bottom: 1rem;
     border-radius: 1rem;
     padding: 1rem;;
 }
@@ -34,10 +36,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding: 0;
-    width: 95%;
-}
-#singleArticleImg{
-    border-radius: 2rem;
     width: 95%;
 }
