--- a/src/css/CommentCard.css
+++ b/src/css/CommentCard.css
@@ -27,4 +27,5 @@
     border-style: solid;
     border-radius: 1rem;
     padding: 1rem;
+    margin-bottom: 1rem;
 }
